implemented home page structure

--- a/public/home.html
+++ b/public/home.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
-    
+    <!-- header -->
+    <header></header>
+    <!-- main -->
+    <section></section>
+    <!-- best sellers slider -->
+    <section></section>
+    <!-- collection -->
+    <section></section>
+    <!-- new arrivals -->
+    <section></section>
+    <!-- featured collection -->
+    <section></section>
+    <!-- about us -->
+    <section></section>
+    <!-- #essenza_style -->
+    <section></section>
+    <!-- footer -->
+    <footer></footer>
 </body>
 
 </html>
